<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".presentation.activities.main.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/indentation_8"
            android:paddingBottom="@dimen/indentation_16">
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_height="@dimen/view_params_110"
                android:layout_width="@dimen/view_params_110"
                app:cardCornerRadius="@dimen/view_params_55">
            <ImageView
                    android:id="@+id/ivUserAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/indentation_16"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_size_28"
                    tools:text="@string/hint_tools_name"/>

            <TextView
                    android:id="@+id/tvUserMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_size_18"
                    tools:text="@string/hint_tools_mail"/>

            <Button
                    android:id="@+id/btnSignOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sign_out"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_params_3"
            android:background="@color/colorLightGray">

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUsers"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/txt_size_40"
            android:gravity="center"
            android:text="@string/hint_no_users_available"/>
</LinearLayout>